# OS-race

./: .gitignore  ;  Cargo.toml  README.md  ahci_disk.img  build.rs  flake.nix  gdb_commands.txt  gdb_unwinder.py  image.iso  interrupt_macro_unwinder.py  limine.conf  log.txt  log.txt.bak  make_disk.sh  result
.cargo/: config.toml
aml_new/functions/: Cargo.toml
aml_new/functions/src/: lib.rs
aml_new/macros/: Cargo.toml
aml_new/macros/src/: lib.rs
assets/: file_reader  gdb_commands.txt  libr  prime_finder  time_printer
bootloader/: Cargo.toml
documentation/: syscalls.md
iso/: limine-bios.sys  limine.cfg  limine.conf
kernel/: Cargo.toml  build.rs  linker_script.ld  rust_os.json
kernel/.cargo/: config.toml
kernel/src/: ap_startup.asm  ap_startup.rs  bee_movie_script.txt  cmd_args.rs  cpuid.rs  file_operations.rs  interrupts.rs  keyboard.rs  limine.rs  main.rs  msr.rs  snake.rs  utils.rs
kernel/src/acpi/: apic.rs  cpus.rs  event_timer.rs  fadt.rs  hpet.rs  ioapic.rs  lapic_timer.rs  madt.rs  mod.rs  platform_info.rs  rsdp.rs  rsdt.rs  sdt.rs  timer.rs
kernel/src/acpi/aml/: aml_code.rs  arg_local_obj.rs  data_object.rs  expression_opcodes.rs  mod.rs  name_objects.rs  named_objects.rs  namespace.rs  namespace_modifier.rs  package.rs  statement_opcodes.rs  term_objects.rs
kernel/src/acpi/smp/: ap_startup.rs  cpu_locals.rs  mod.rs  smp.rs  trampoline.asm
kernel/src/acpi/timer/: hpet.rs  mod.rs  rtc.rs  tsc.rs
kernel/src/clocks/: hpet.rs  mod.rs  rtc.rs  tsc.rs
kernel/src/disk/: mod.rs
kernel/src/drivers/: ahci.rs  disk.rs  gpt.rs  mod.rs  rfs.rs  virtual_disk.rs
kernel/src/drivers/ahci/: disk.rs  fis.rs  mod.rs
kernel/src/drivers/rfs/: btree.rs  mod.rs  rfs.rs
kernel/src/interrupts/: acpi.rs  gdt.rs  handlers.rs  idt.rs  macros.rs  mod.rs
kernel/src/memory/: heap.rs  mod.rs  paging.rs  physical_allocator.rs  stack.rs  utils.rs
kernel/src/parsers/: mod.rs
kernel/src/parsers/elf/: header.rs  mod.rs  program_header.rs  section.rs
kernel/src/pci/: device_config.rs  mod.rs  port_access.rs
kernel/src/proc/: context.rs  context_switch.rs  dispatcher.rs  mod.rs  process_data.rs  scheduler.rs  syscall.rs
kernel/src/proc/context/: builder.rs  info.rs  mod.rs
kernel/src/proc/loaders/: elf.rs  mod.rs
kernel/src/proc/scheduler/: mod.rs  simple_scheduler.rs
kernel/src/proc/syscall/: mod.rs
kernel/src/proc/syscall/handlers/: console_write.rs  fclose.rs  fopen.rs  fread.rs  fwrite.rs  illegal.rs  mod.rs  time.rs
kernel/src/task_runner/: mod.rs
kernel/src/tests/: A0_trivial.rs  A1_log_2_rounded_up.rs  A1_vec.rs  A2_vec.rs  memory_utils.rs  mod.rs
kernel/src/vfs/: dtmpfs.rs  file.rs  filesystem_trait.rs  fs_tree.rs  inode.rs  mod.rs  operations.rs  path.rs
kernel/src/vfs/adapters/: mod.rs  proc_adapter.rs  tty_adapter.rs
kernel/src/vga/: mod.rs  vga_driver.rs  vga_text.rs
kernel_build_files/: image.iso  kernel.elf
kernel_test/: Cargo.toml
kernel_test/src/: lib.rs
macros/macros/: Cargo.toml
macros/macros/src/: lib.rs
macros/traits/: Cargo.toml
macros/traits/src/: lib.rs
os/: Cargo.toml
os/src/: main.rs
src/: main.rs
std/: Cargo.toml
std/src/: arc.rs  boxed.rs  error.rs  heap.rs  lib.rs  mem_utils.rs  page_allocator.rs  panic.rs  print.rs  rc.rs  string.rs  thread.rs  time.rs  vec.rs
std/src/eh/: elf_parser.rs  mod.rs  panic.rs
std/src/sync/: arc.rs  async_lock.rs  async_rw_lock.rs  lock_info.rs  mod.rs  mutex.rs  no_int_spinlock.rs  rw_lock.rs  spinlock.rs
std/src/vec/: mod.rs  spec_from_elem.rs  vec_struct.rs
unroll/: Cargo.toml
unroll/src/: lib.rs
