[package]
name = "os-race"
version = "0.1.0"

[workspace]
name = "os-race"
version = "0.1.0"
edition = "2018"
members = [
    "kernel",
    "kernel_test"
]

[features]
run_tests = ["kernel/run_tests"]

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none", features = ["run_tests"] }
bootloader = "0.11"

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
