[package]
name = "os-race"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "kernel",
    "kernel_test",
    "std"
]

[features]
run_tests = ["kernel/run_tests"]

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none", features = ["run_tests"] }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[profile.dev]
panic = "unwind"
opt-level = 0
lto = false


[profile.release]
panic = "unwind"
opt-level = 0
lto = false
