[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lints.rust]
dead_code = "allow"
static_mut_refs = "allow"

[lints.clippy]
needless_range_loops = "allow"

[[bin]]
name = "kernel"
path = "src/main.rs"

[features]
run_tests = []

[dependencies]
kernel_test = { path = "../kernel_test"}
std = { path = "../std", features = ["test_includes"] }
macros = { path = "../macros/macros" }
traits = { path = "../macros/traits" }
bitfield = "0.18.1" #yeah outside dependency, crazy, i know
unroll = { path = "../unroll" }
